Keyboard remote control

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -11,7 +11,7 @@
     <div class="title">
         <center>
             <img src="{{ url_for('static', filename = 'img/text.png')}}" class="header-img">
-
+		<img src="" id="map_img" alt="Unable To Load Map Image"/>
             <h5 class="d-none d-md-block">All key presses on this page are sent to the python backend (app/views.py)</h5>
         </center>
         <div class="row">
