work in progress on turty control app

--- a/src/app/templates/base.html
+++ b/src/app/templates/base.html
@@ -3,9 +3,10 @@
 <head>
 	<script src="{{ url_for('static', filename = 'js/jquery.min.js')}}"></script>
   	<script src="{{ url_for('static', filename = 'js/bootstrap.bundle.min.js') }}"></script>
-
+  	<script src="{{ url_for('static', filename = 'js/vue.js') }}"></script>
 
   	<link href="{{ url_for('static', filename = 'css/bootstrap.min.css') }}" rel="stylesheet">
+  	<link href="{{ url_for('static', filename = 'css/fontawesome.min.css') }}" rel="stylesheet">
   	<link href="{{ url_for('static', filename = 'css/main.css')}}" rel="stylesheet">
   	{% block head %}{% endblock %}
 	<title>{% block title %}{% endblock %}</title>
