--- a/src/app/static/css/main.css
+++ b/src/app/static/css/main.css
@@ -4,7 +4,7 @@
 body{
 	overflow: none;
 	background-color: #111;
-	color: #999;
+	color: #bbb;
 }
 
 .title{
@@ -36,7 +36,7 @@ body{
 	text-align: center;
 	position: absolute;
 	bottom: 20px;
-	width: auto;
+
 }
 
 @media (min-width: 768px) {
@@ -55,4 +55,15 @@ body{
 }
 .btn-primary:hover{
 	background-color: #ff7711;
+}
+
+tr{
+	color: #eee;
+}
+
+i{
+	color: #eee;
+}
+a{
+	color: #bbb;
 }
