--- a/src/app/static/css/main.css
+++ b/src/app/static/css/main.css
@@ -15,29 +15,30 @@ body{
 	position: fixed;
 	right: 20px;
 	top:50%;
-	z-index: 0;
+	z-index: -10;
 }
 
 .btn-primary{
 	width: 50vw;
 	height: 10vh;
 	font-size: 25px;
-	margin-top: 20px;
+	margin: 10px;
 	background-color: #ff6600;
 	border: 0px;
 }
 
 .header-img{
-	width: 50vw;
+	width: 130px;
 }
 
 
-.footer{
-	text-align: center;
-	position: absolute;
-	bottom: 20px;
-
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 40px; /* Set the fixed height of the footer here */
 }
+
 
 @media (min-width: 768px) {
 	.title{
@@ -47,7 +48,6 @@ body{
 		width: 220px;
 		height: 60px;
 		font-size: 20px;
-		margin-top: 70px;
 	}
 	.header-img{
 		max-width: 40%;
