more backend + light theme

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %} {% block head %}
 <script src="{{ url_for('static', filename = 'js/main.js')}}"></script>
+<script src="{{ url_for('static', filename = 'js/main.js')}}"></script>
+<link href="{{ url_for('static', filename = 'css/enable.css')}}" />
 <meta name="viewport" content="width=device-width height=device-height, initial-scale=1">
 {% endblock %} {% block title %}Rhoeby Remote{% endblock %} {% block body %}
 
