--- a/src/app/static/css/main.css
+++ b/src/app/static/css/main.css
@@ -5,6 +5,7 @@ body{
 	overflow: none;
 	background-color: #111;
 	color: #bbb;
+	padding-bottom: 50px;
 }
 
 .title{
@@ -90,4 +91,24 @@ i{
 }
 a{
 	color: #bbb;
+}
+.footer{
+	display: none;
+}
+
+.loader {
+	border: 16px solid #f3f3f3; /* Light grey */
+	border-top: 16px solid #dd5620; /* Blue */
+	border-radius: 50%;
+	width: 120px;
+	height: 120px;
+	animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+  }
+.loading{
+	padding-top: 400px;
 }
