Weasel words for error

--- a/src/app/templates/wip.html
+++ b/src/app/templates/wip.html
@@ -91,7 +91,8 @@
 
             <div class="bottom">
                <center>
-                    <img :src="mapImg" class="map-img" id="map_img" alt="Unable To Load Map Image"/>
+                    <!-- JJ <img :src="mapImg" class="map-img" id="map_img" alt="Unable To Load Map Image"/> -->
+                    <img :src="mapImg" class="map-img" id="map_img" alt="Loading Map Image..."/>
                 </center>
             </div>
         </div>
@@ -104,7 +105,8 @@
                     </center>
                     <div class="mapPreview">
                        <center>
-                            <img :src="mapImg" class="map-img" id="map_img" alt="Unable To Load Map Image"/>
+                            <!-- JJ <img :src="mapImg" class="map-img" id="map_img" alt="Unable To Load Map Image"/> -->
+                            <img :src="mapImg" class="map-img" id="map_img" alt="Loading Map Image..."/>
                         </center>
                     </div>
                 </div>
@@ -133,7 +135,8 @@
                     </center>
                     <div class="mapPreview">
                        <center>
-                            <img :src="mapImg" class="map-img" id="map_img" alt="Unable To Load Map Image"/>
+                            <!-- JJ <img :src="mapImg" class="map-img" id="map_img" alt="Unable To Load Map Image"/> -->
+                            <img :src="mapImg" class="map-img" id="map_img" alt="Loading Map Image..."/>
                         </center>
                     </div>
                 </div>
