added better footer

--- a/src/app/templates/wip.html
+++ b/src/app/templates/wip.html
@@ -162,6 +162,13 @@
             </center>
 
           </div>
+          <div class="col-sm-3">
+              <p class="text-right fixed-bottom" style="padding-right: 10px;"><small>
+                <span v-if="robot_name == null">Not Connected</span>
+                <span v-else >${robot_name}</span>
+              </small> </p>
+        
+          </div>
         </div>
         </div>
 
